ehnance geo tracking

--- a/web/index.html
+++ b/web/index.html
@@ -173,6 +173,7 @@
                     style="padding: 0.5rem; background: #fff; border-bottom: 1px solid var(--border-color); display: flex; gap: 0.5rem;">
                     <button class="panel-btn quick-filter-btn" data-days="1" style="width: auto;">24h</button>
                     <button class="panel-btn quick-filter-btn" data-days="7" style="width: auto;">7d</button>
+                    <input type="text" class="panel-input" id="history-country" placeholder="Country (e.g. US)" style="margin:0; width: 120px;">
                     <input type="text" class="panel-input" id="history-filter" placeholder="Search..."
                         style="margin:0; width: 200px;">
                     <input type="datetime-local" class="panel-input" id="history-start" style="margin:0; width: auto;">
