add process monitoring

--- a/web/index.html
+++ b/web/index.html
@@ -99,10 +99,18 @@
                 </div>
             </div>
 
-            <!-- Talkers (Mini List) -->
+            <!-- Top Talkers (Mini List) -->
             <div class="panel-section">
                 <div class="section-label">Top Talkers</div>
                 <div class="scrollable-list" id="talker-list">
+                    <!-- JS Injected -->
+                </div>
+            </div>
+
+            <!-- Top Processes -->
+            <div class="panel-section">
+                <div class="section-label">Top Processes</div>
+                <div class="scrollable-list" id="process-list">
                     <!-- JS Injected -->
                 </div>
             </div>
@@ -137,6 +145,7 @@
                                 <th class="col-ip">Destination</th>
                                 <th>Protocol</th>
                                 <th>Len</th>
+                                <th>Process</th>
                                 <th>Info</th>
                             </tr>
                         </thead>
@@ -173,7 +182,8 @@
                     style="padding: 0.5rem; background: #fff; border-bottom: 1px solid var(--border-color); display: flex; gap: 0.5rem;">
                     <button class="panel-btn quick-filter-btn" data-days="1" style="width: auto;">24h</button>
                     <button class="panel-btn quick-filter-btn" data-days="7" style="width: auto;">7d</button>
-                    <input type="text" class="panel-input" id="history-country" placeholder="Country (e.g. US)" style="margin:0; width: 120px;">
+                    <input type="text" class="panel-input" id="history-country" placeholder="Country (e.g. US)"
+                        style="margin:0; width: 120px;">
                     <input type="text" class="panel-input" id="history-filter" placeholder="Search..."
                         style="margin:0; width: 200px;">
                     <input type="datetime-local" class="panel-input" id="history-start" style="margin:0; width: auto;">
@@ -190,6 +200,7 @@
                                 <th class="col-ip">Destination</th>
                                 <th>Protocol</th>
                                 <th>Len</th>
+                                <th>Process</th>
                                 <th>Info</th>
                             </tr>
                         </thead>
