--- a/web/index.html
+++ b/web/index.html
@@ -7,6 +7,8 @@
     <title>Pi-Track Network</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons@7.2.3/css/flag-icons.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
 
 <body>
@@ -31,8 +33,11 @@
             </div>
 
             <div style="margin-top: auto;"></div>
-            <div class="nav-icon-btn" id="db-status" title="Database Status">
-                <span id="db-text"><i class="bi bi-database"></i></span>
+            <button class="theme-toggle" id="theme-toggle" title="Toggle Dark Mode">
+                <i class="bi bi-moon-fill"></i>
+            </button>
+            <div class="nav-icon-btn" id="db-btn" title="Database Info">
+                <i class="bi bi-database"></i>
             </div>
             <div class="nav-icon-btn" id="connection-status" title="Connection Status">
                 <i class="bi bi-circle-fill" style="font-size: 8px;"></i>
@@ -48,7 +53,7 @@
 
             <!-- Global Stats Section -->
             <div class="panel-section">
-                <div class="section-label">Throughput</div>
+                <div class="section-label">Throughput <i class="bi bi-chevron-down chevron"></i></div>
                 <div class="mini-stats-grid">
                     <div class="mini-stat">
                         <div class="mini-stat-val" id="packets-per-sec">0</div>
@@ -62,7 +67,7 @@
             </div>
 
             <div class="panel-section">
-                <div class="section-label">Totals</div>
+                <div class="section-label">Totals <i class="bi bi-chevron-down chevron"></i></div>
                 <div class="mini-stats-grid">
                     <div class="mini-stat">
                         <div class="mini-stat-val" id="total-packets">0</div>
@@ -77,31 +82,41 @@
 
             <!-- Protocols Section -->
             <div class="panel-section">
-                <div class="section-label">Protocols</div>
+                <div class="section-label">Protocols <i class="bi bi-chevron-down chevron"></i></div>
                 <div class="panel-chart" style="flex-wrap: wrap; gap: 10px;" id="protocol-circles">
                     <!-- JS Injected -->
                 </div>
             </div>
 
+            <!-- Traffic Chart Section -->
+            <div class="panel-section">
+                <div class="section-label">Traffic Rate <i class="bi bi-chevron-down chevron"></i></div>
+                <div class="chart-container">
+                    <canvas id="traffic-chart"></canvas>
+                </div>
+            </div>
+
             <!-- Filters Section (Only for Live tab really) -->
             <div class="panel-section" id="live-filters">
-                <div class="section-label">Filters</div>
-                <select id="time-window" class="panel-select">
-                    <option value="1">Last 1 min</option>
-                    <option value="5">Last 5 min</option>
-                    <option value="10" selected>Last 10 min</option>
-                    <option value="30">Last 30 min</option>
-                </select>
+                <div class="section-label">Filters <i class="bi bi-chevron-down chevron"></i></div>
+                <div class="time-filter-group">
+                    <button class="time-pill" data-minutes="1">1m</button>
+                    <button class="time-pill" data-minutes="5">5m</button>
+                    <button class="time-pill active" data-minutes="10">10m</button>
+                    <button class="time-pill" data-minutes="30">30m</button>
+                </div>
                 <input type="text" class="panel-input" id="packet-filter" placeholder="Search IPs, Ports...">
-                <div style="display: flex; gap: 0.5rem;">
-                    <button class="panel-btn" id="pause-btn">Pause</button>
-                    <button class="panel-btn" id="clear-btn">Clear</button>
+                <div style="display: flex; gap: 8px;">
+                    <button class="panel-btn" id="pause-btn" style="flex: 1;"><i class="bi bi-pause-fill"></i>
+                        Pause</button>
+                    <button class="panel-btn" id="clear-btn" style="flex: 1;"><i class="bi bi-trash3"></i>
+                        Clear</button>
                 </div>
             </div>
 
             <!-- Top Talkers (Mini List) -->
             <div class="panel-section">
-                <div class="section-label">Top Talkers</div>
+                <div class="section-label">Top Talkers <i class="bi bi-chevron-down chevron"></i></div>
                 <div class="scrollable-list" id="talker-list">
                     <!-- JS Injected -->
                 </div>
@@ -109,7 +124,7 @@
 
             <!-- Top Processes -->
             <div class="panel-section">
-                <div class="section-label">Top Processes</div>
+                <div class="section-label">Top Processes <i class="bi bi-chevron-down chevron"></i></div>
                 <div class="scrollable-list" id="process-list">
                     <!-- JS Injected -->
                 </div>
@@ -124,7 +139,11 @@
                     <div class="content-title" id="page-title">Live Traffic</div>
                     <div style="font-size: 0.75rem; color: var(--text-secondary);">Real-time packet inspection</div>
                 </div>
-                <div class="content-actions">
+                <div class="content-actions" style="gap: 1rem;">
+                    <div class="live-indicator" id="live-indicator">
+                        <span class="dot"></span>
+                        <span>Live</span>
+                    </div>
                     <div style="font-size: 0.8rem; color: var(--text-secondary);">
                         Uptime: <span id="uptime" style="font-family: monospace;">00:00:00</span>
                     </div>
@@ -178,17 +197,21 @@
 
             <!-- History View -->
             <div class="view-pane" id="tab-history">
-                <div
-                    style="padding: 0.5rem; background: #fff; border-bottom: 1px solid var(--border-color); display: flex; gap: 0.5rem;">
+                <div class="history-filter-bar">
                     <button class="panel-btn quick-filter-btn" data-days="1" style="width: auto;">24h</button>
                     <button class="panel-btn quick-filter-btn" data-days="7" style="width: auto;">7d</button>
-                    <input type="text" class="panel-input" id="history-country" placeholder="Country (e.g. US)"
-                        style="margin:0; width: 120px;">
+                    <select class="panel-select" id="history-country" style="margin:0; width: 140px;">
+                        <option value="">All Countries</option>
+                        <!-- Populated by JS -->
+                    </select>
                     <input type="text" class="panel-input" id="history-filter" placeholder="Search..."
                         style="margin:0; width: 200px;">
                     <input type="datetime-local" class="panel-input" id="history-start" style="margin:0; width: auto;">
                     <input type="datetime-local" class="panel-input" id="history-end" style="margin:0; width: auto;">
                     <button class="panel-btn" id="history-search-btn" style="width: auto;">Search</button>
+                    <button class="export-btn" id="export-csv-btn" title="Export to CSV">
+                        <i class="bi bi-download"></i> Export
+                    </button>
                 </div>
                 <div class="table-wrapper">
                     <table class="dense-table packet-table">
@@ -235,6 +258,42 @@
 
         </main>
     </div>
+
+    <!-- Panel Toggle Button (Mobile) -->
+    <button class="panel-toggle" id="panel-toggle">
+        <i class="bi bi-sliders"></i>
+    </button>
+
+    <!-- Packet Detail Modal -->
+    <div class="modal-overlay" id="packet-modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Packet Details</h3>
+                <button class="modal-close" id="modal-close">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="detail-grid" id="packet-details">
+                    <!-- JS Injected -->
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Database Info Modal -->
+    <div class="modal-overlay" id="db-modal">
+        <div class="modal-content" style="max-width: 400px;">
+            <div class="modal-header">
+                <h3><i class="bi bi-database" style="margin-right: 8px;"></i>Database Info</h3>
+                <button class="modal-close" id="db-modal-close">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div class="db-stats-grid" id="db-details">
+                    <!-- JS Injected -->
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 
