allow expandable rows

--- a/web/index.html
+++ b/web/index.html
@@ -155,7 +155,7 @@
             <!-- Live View -->
             <div class="view-pane active" id="tab-live">
                 <div class="table-wrapper">
-                    <table class="dense-table packet-table">
+                    <table class="dense-table packet-table resizable">
                         <thead>
                             <tr>
                                 <th class="col-time">Time</th>
